<resources>
    <string name="app_name">My First App</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="edit_IP">enter IP</string>
    <string name="edit_Port">enter Port</string>
    <string name="edit_Name">enter Name</string>
    <string name="action_sign_in">Login</string>
    <!--<string name="default_IP">192.168.137.55</string>-->
    <string name="default_IP">10.125.103.139</string>
    <string name="default_Port">9000</string>
    <string name="default_Name">asd</string>
    <string name="login_title">Welcome to ChatRoom</string>
    <string name="friend_list_title">FriendList</string>
    <string name="type_hint">Type something here</string>
    <string name="send_button_text">Send</string>
</resources>
