<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_my"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText android:id="@+id/enter_IP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_IP"
            android:text="@string/default_IP" />

        <EditText android:id="@+id/enter_Port"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_Port"
            android:text="@string/default_Port" />

        <EditText android:id="@+id/enter_Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_Name"
            android:text="@string/default_Name" />

        <Button
            android:id="@+id/sign_in_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/action_sign_in"
            android:textStyle="bold"
            android:onClick="login"/>

    </LinearLayout>

</LinearLayout>
